# defensive-python-labs

./: CONTRIBUTING.md  README.md  pyproject.toml  simulator.html
.github/ISSUE_TEMPLATE/: bug_report.md  lab_or_tool_request.md
src/defensive_python_labs/: __init__.py  cli.py
src/defensive_python_labs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/defensive_python_labs/crypto/: classic_ciphers.py
src/defensive_python_labs/forensics/: __init__.py  log_analyzer.py  metadata_extractor.py
src/defensive_python_labs/malware_analysis/: __init__.py  static_analyzer.py
src/defensive_python_labs/password_security/: __init__.py  hash_cracker.py  password_strength.py
src/defensive_python_labs/recon/: __init__.py  dns_recon.py  port_scanner.py
src/defensive_python_labs/web_security/: __init__.py  headers_analyzer.py
tests/: test_classic_ciphers.py  test_port_scanner.py
