[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "defensive-python-labs"
version = "0.1.0"
description = "Educational Python labs and utilities for defensive cybersecurity and security learning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "cutewizzy11" }
]
keywords = ["cybersecurity", "security", "education", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Education",
  "Intended Audience :: System Administrators",
  "Topic :: Security",
]

dependencies = [
  "requests>=2.31.0",
  "rich>=13.0.0",
  "pillow>=10.0.0",
  "exifread>=3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=24.0.0",
  "ruff>=0.5.0",
]

[project.urls]
"Homepage" = "https://github.com/cutewizzy11/defensive-python-labs"
"Issues" = "https://github.com/cutewizzy11/defensive-python-labs/issues"
