[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "defensive-python-labs"
version = "0.2.0"
description = "Educational Python labs and utilities for defensive cybersecurity"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Paul Anyebe", email = "paul@example.com" }]
keywords = ["cybersecurity", "security", "forensics", "defensive", "education", "ethical-hacking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = []  # Zero required dependencies — runs on stdlib alone

[project.optional-dependencies]
exif = ["Pillow>=10.0"]           # EXIF extraction in forensics module
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "ruff",
    "Pillow>=10.0",
]

[project.scripts]
dplabs = "defensive_python_labs.cli:main"

[project.urls]
Homepage = "https://github.com/cutewizzy11/defensive-python-labs"
"Bug Tracker" = "https://github.com/cutewizzy11/defensive-python-labs/issues"
"Source Code" = "https://github.com/cutewizzy11/defensive-python-labs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
python_version = "3.9"
strict = true

[tool.ruff]
line-length = 100
target-version = "py39"
